<resources>
    <string name="app_name">40K Game Manager</string>
    <string name="textview">QR Code Scanner</string>
    <string name="scan">Scan</string>
    <string name="_40k_game_manager">40K Game Manager</string>
    <string name="setup_game">Setup game</string>
    <string name="view_all_objectives">View all objectives</string>
    <string name="name_player_one">\</string>
    <string name="name_player_string_name_player_one">Name</string>
    <string name="army1">Army</string>
    <string name="player_1">Player 1</string>
    <string name="name">Name</string>
    <string name="player_2">Player 2</string>
    <string name="army2">Army</string>
    <string name="ga_verder">Continue</string>
    <string name="generate_scenario">Play scenario:</string>
    <string name="view_all_scenarios">View all scenarios</string>
    <string name="generated_scenario_title">scenarioTitle</string>
    <string name="start_game">Start game</string>
    <string name="who_goes_first">Who goes first?</string>
    <string name="playertwo">PlayerTwo</string>
    <string name="playerone">PlayerOne</string>
    <string name="end_game">End Game</string>
    <string name="turn">Turn 1</string>
    <string name="next_turn">Next turn</string>
    <string name="score_player_2">Score player 2</string>
    <string name="score_player_1">Score player 1</string>
    <string name="vp_player_1">vp player 1</string>
    <string name="scenarioid">scenarioId</string>
    <string name="scenariotitle">scenarioTitle</string>

    <string name="scenariotype">scenarioType</string>
    <string name="scenariodesription">scenarioDesription</string>
    <string name="scenarioXid">ScenarioXId</string>
    <string name="scenario_armies">Scenario Armies</string>
    <string name="victory_conditions">Victory Conditions</string>
    <string name="scenario_length">Scenario Length</string>
    <string name="first_turn">First Turn</string>
    <string name="deployment">Deployment</string>
    <string name="battlefield">Battlefield</string>
</resources>
